bootstrap/rig-system/kustomize/operations-manager/overlays/sandboxed-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operations-manager
  namespace: rig-system
spec:
  ingressClassName: nginx
  rules:
    - host: zad.sandbox.rijksapp.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operations-manager
                port:
                  number: 8000
  tls:
    - hosts:
        - zad.sandbox.rijksapp.dev
      secretName: sandbox-wildcard-tls
